<resources>
    <string name="app_name">HealthVsWeatherApp</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="appLogo">App Logo</string>
    <string name="welcome">Welcome to Healthcare vs Weather</string>
    <string name="action_settings">Settings</string>
    <string name="enter_username">Enter Your Username</string>
    <string name="enter_pwd">Enter Your Password</string>
    <string name="enter_pwd_again">Enter Your Password Again</string>
    <string name="enter_email">Enter Your Email Id</string>
    <string name="enter_MobNo">Enter 10 digit Mob No</string>
    <string name="enter_first_name">Enter Your FirstName</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="select_state">Type State Name Slowly</string>
    <string name="select_city">Type City Name Slowly</string>
    <string name="enter_zip">Enter Your Zip code</string>
    <string name="select_DOB">MM/DD/YYYY format</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="enter_add">Enter Your Address Here</string>
</resources>
