<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerLayOut"
    tools:context=".RegisterActivity">

<ScrollView
android:layout_width="match_parent"
android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <!-- Content here -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtUsername"
        android:layout_weight="0.17"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/enter_username"
        android:maxLength="40"
        android:background="#d0c5ff" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtPassword"
        android:layout_weight="0.20"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_pwd"
        android:maxLength="40"
        android:background="#d0c5ff" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtCfmPassword"
        android:layout_weight="0.17"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/enter_pwd_again"
        android:maxLength="40"
        android:background="#d0c5ff" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/Name"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_weight="0.17"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/enter_name"
        android:maxLength="40"
        android:background="#d0c5ff" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:id="@+id/GenderLayOut"
        android:background="#d0c5ff">
        <TextView android:text="@string/gender" android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textGender"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:textSize="20sp" />
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:id="@+id/RListGender"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/RadioMale"
                android:layout_weight="0.17" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/RadioFemale"
                android:layout_weight="0.17" />
        </RadioGroup>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:hint="@string/enter_add"
        android:id="@+id/txtPostalAddress"
        android:background="#d0c5ff"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:lines="3"
        android:layout_weight="0.17" />
    <AutoCompleteTextView
        android:id="@+id/autoCompleteCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:maxLength="40"
        android:background="#d0c5ff"
        android:hint="@string/select_city"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10" />
    <AutoCompleteTextView
        android:id="@+id/autoCompleteStates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#d0c5ff"
        android:maxLength="40"
        android:hint="@string/select_state"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:maxLength="6"
        android:id="@+id/txtZip"
        android:hint="@string/enter_zip"
        android:background="#d0c5ff"
        android:layout_weight="0.17" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:maxLength="10"
        android:background="#d0c5ff"
        android:id="@+id/txtDOB"
        android:hint="@string/select_DOB"
        android:layout_weight="0.17" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtemailid"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:layout_weight="0.20"
        android:hint="@string/enter_email"
        android:maxLength="40"
        android:background="#d0c5ff" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtmobno"
        android:layout_weight="0.17"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/enter_MobNo"
        android:maxLength="10"
        android:background="#d0c5ff" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:id="@+id/LoginRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <Button
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/btn_Submit"
            android:layout_width="wrap_content"
            android:background="@color/accent_material_dark"
            android:clickable="true" />
        <Button
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_Cancel"
            android:layout_width="wrap_content"
            android:background="@color/accent_material_dark"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>


    </LinearLayout>
</LinearLayout>
</ScrollView>




</LinearLayout>