<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/HealthVsWeather" >



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:divider="@android:color/black"
        style="@android:style/ButtonBar">
    <TextView android:text="@string/welcome" android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:singleLine="false"
        android:linksClickable="false"
        android:layout_gravity="center"
        android:textColor="#f3fff9"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textIsSelectable="false"
        android:lines="2" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageViewAppLogo"
            android:src="@mipmap/healthvsweather"
            android:layout_gravity="end"
            android:contentDescription="@string/appLogo"
            android:adjustViewBounds="false"
            android:focusable="false" />
        </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/UserCred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_margin="@dimen/activity_vertical_margin">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtUsername"
            android:layout_weight="0.17"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="text"
            android:hint="@string/enter_username"
            android:maxLength="40"
            android:background="#d0c5ff" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtPassword"
            android:layout_weight="0.20"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_pwd"
            android:maxLength="40"
            android:background="#d0c5ff" />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:id="@+id/LoginRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <Button
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:id="@+id/btn_SignIn"
            android:layout_width="wrap_content"
            android:background="@color/accent_material_dark"
            android:clickable="true" />



        <Button
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/btn_Register"
            android:layout_width="wrap_content"
            android:background="@color/accent_material_dark"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>


    </LinearLayout>

</LinearLayout>
